<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/info_container_h"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/latest_test_date"
    tools:layout_marginStart="@dimen/main_start_end_margin"
    tools:layout_marginEnd="@dimen/main_start_end_margin"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/heart_rate_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_border_light_blue_grey_r4"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/oxygen_saturation_container"
        app:layout_constraintEnd_toStartOf="@+id/respiratory_rate_container"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintWidth_percent="0.3">

        <TextView
            android:id="@+id/textView10"
            style="@style/InfoContainerTitleTextView"
            android:text="@string/heart_rate"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_heart_rate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/heart_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TickerTextAppearance_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/late_HR_value_unit"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:ticker_animationDuration="500"
            app:ticker_defaultCharacterList="number"
            tools:text="83" />

        <TextView
            android:id="@+id/late_HR_value_unit"
            style="@style/InfoContainerUnitTextView"
            android:text="@string/heart_rate_unit"
            app:layout_constraintBottom_toBottomOf="@+id/heart_rate_value"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/heart_rate_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/respiratory_rate_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_border_light_blue_grey_r4"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/heart_rate_container"
        app:layout_constraintEnd_toStartOf="@+id/hrv_sdnn_container"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/heart_rate_container"
        app:layout_constraintTop_toTopOf="@+id/heart_rate_container"
        app:layout_constraintWidth_percent="0.3">

        <TextView
            android:id="@+id/textView28"
            style="@style/InfoContainerTitleTextView"
            android:text="@string/respiratory_rate"
            app:layout_constraintBottom_toTopOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_respiratory_rate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/respiratory_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TickerTextAppearance_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/late_RR_value_unit"
            app:layout_constraintTop_toBottomOf="@+id/textView28"
            app:ticker_animationDuration="500"
            app:ticker_defaultCharacterList="number"
            tools:text="95" />

        <TextView
            android:id="@+id/late_RR_value_unit"
            style="@style/InfoContainerUnitTextView"
            android:text="@string/respiratory_rate_unit"
            app:layout_constraintBottom_toBottomOf="@+id/respiratory_rate_value"
            app:layout_constraintEnd_toEndOf="@+id/textView28"
            app:layout_constraintTop_toTopOf="@+id/respiratory_rate_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hrv_sdnn_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_border_light_blue_grey_r4"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/heart_rate_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/respiratory_rate_container"
        app:layout_constraintTop_toTopOf="@+id/heart_rate_container"
        app:layout_constraintWidth_percent="0.3">

        <TextView
            android:id="@+id/textView30"
            style="@style/InfoContainerTitleTextView"
            android:text="@string/hrv_sdnn"
            app:layout_constraintBottom_toTopOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_hrv_sdnn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView30"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/hrv_sdnn_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TickerTextAppearance_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/late_HRV_SDNN_value_unit"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            app:ticker_animationDuration="500"
            app:ticker_defaultCharacterList="number"
            tools:text="95" />

        <TextView
            android:id="@+id/late_HRV_SDNN_value_unit"
            style="@style/InfoContainerUnitTextView"
            android:text="@string/hrv_sdnn_unit"
            app:layout_constraintBottom_toBottomOf="@+id/hrv_sdnn_value"
            app:layout_constraintEnd_toEndOf="@+id/textView30"
            app:layout_constraintTop_toTopOf="@+id/hrv_sdnn_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/oxygen_saturation_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_border_light_blue_grey_r4"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stress_container"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heart_rate_container"
        app:layout_constraintWidth_percent="0.3">

        <TextView
            android:id="@+id/textView3"
            style="@style/InfoContainerTitleTextView"
            android:text="@string/oxygen_saturation"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_oxygen_saturation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/oxygen_saturation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TickerTextAppearance_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/late_RHV_value_unit"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:ticker_animationDuration="500"
            app:ticker_defaultCharacterList="number"
            tools:text="99" />

        <TextView
            android:id="@+id/late_RHV_value_unit"
            style="@style/InfoContainerUnitTextView"
            android:text="@string/oxygen_saturation_unit"
            app:layout_constraintBottom_toBottomOf="@+id/oxygen_saturation_value"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/oxygen_saturation_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stress_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_border_light_blue_grey_r4"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/oxygen_saturation_container"
        app:layout_constraintEnd_toStartOf="@+id/blood_pressure_container"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/oxygen_saturation_container"
        app:layout_constraintTop_toTopOf="@+id/oxygen_saturation_container"
        app:layout_constraintWidth_percent="0.3">

        <TextView
            android:id="@+id/textView29"
            style="@style/InfoContainerTitleTextView"
            android:text="@string/stress"
            app:layout_constraintBottom_toTopOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_stress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView29"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/stress_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TickerTextAppearance_main"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="@+id/textView29"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:ticker_animationDuration="500"
            app:ticker_defaultCharacterList="number"
            tools:text="@string/vital_stress_normal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blood_pressure_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_border_light_blue_grey_r4"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/oxygen_saturation_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stress_container"
        app:layout_constraintTop_toTopOf="@+id/oxygen_saturation_container"
        app:layout_constraintWidth_percent="0.3">

        <TextView
            android:id="@+id/textView31"
            style="@style/InfoContainerTitleTextView"
            android:text="@string/blood_pressure"
            app:layout_constraintBottom_toTopOf="@+id/imageView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_blood_pressure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView31"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/highest_blood_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TickerTextAppearance_main"
            app:layout_constraintBottom_toTopOf="@+id/lowest_blood_pressure_value"
            app:layout_constraintEnd_toStartOf="@+id/late_BP_value_unit"
            app:layout_constraintTop_toTopOf="@+id/imageView14"
            app:ticker_animationDuration="500"
            app:ticker_defaultCharacterList="number"
            tools:text="132" />

        <TextView
            android:id="@+id/late_BP_value_unit"
            style="@style/InfoContainerUnitTextView"
            android:text="@string/blood_pressure_unit"
            app:layout_constraintBottom_toBottomOf="@+id/highest_blood_pressure_value"
            app:layout_constraintEnd_toEndOf="@+id/textView31"
            app:layout_constraintTop_toTopOf="@+id/highest_blood_pressure_value" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/lowest_blood_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TickerTextAppearance_main"
            app:layout_constraintBottom_toBottomOf="@+id/imageView14"
            app:layout_constraintEnd_toEndOf="@+id/highest_blood_pressure_value"
            app:layout_constraintTop_toBottomOf="@+id/highest_blood_pressure_value"
            app:ticker_animationDuration="500"
            app:ticker_defaultCharacterList="number"
            tools:text="65" />

        <TextView
            android:id="@+id/late_BP_value_unit2"
            style="@style/InfoContainerUnitTextView"
            android:text="@string/blood_pressure_unit"
            app:layout_constraintBottom_toBottomOf="@+id/lowest_blood_pressure_value"
            app:layout_constraintEnd_toEndOf="@+id/late_BP_value_unit"
            app:layout_constraintStart_toStartOf="@+id/late_BP_value_unit"
            app:layout_constraintTop_toTopOf="@+id/lowest_blood_pressure_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>